# cargo-context

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  clippy.toml  deny.toml
.cargo-context/: scrub.yaml
.claude/: settings.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/cargo-context-cli/: Cargo.toml
crates/cargo-context-cli/src/: args.rs  main.rs
crates/cargo-context-cli/tests/: impact_scope_e2e.rs
crates/cargo-context-core/: Cargo.toml
crates/cargo-context-core/src/: budget.rs  collect.rs  config.rs  error.rs  expand.rs  impact.rs  lib.rs  options.rs  pack.rs  scrub.rs  tokenize.rs
crates/cargo-context-core/src/collect/: diff.rs  entry.rs  errors.rs  meta.rs  mod.rs  tests_rs.rs
crates/cargo-context-core/src/pack/: impact.rs  mod.rs  render.rs
crates/cargo-context-core/src/scrub/: config.rs  entropy.rs  mod.rs  paths.rs
crates/cargo-context-mcp/: Cargo.toml
crates/cargo-context-mcp/src/: main.rs  server.rs  tools.rs
crates/cargo-context-scrub/: Cargo.toml
crates/cargo-context-scrub/src/: lib.rs
scripts/qa/: post_edit.sh  run_local_qa.sh  verify_release_version.sh
