[workspace]
resolver = "2"
members = [
    "crates/cargo-context-core",
    "crates/cargo-context-cli",
    "crates/cargo-context-mcp",
    "crates/cargo-context-scrub",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/andreasmueller/cargo-context"
authors = ["Andreas Mueller"]

[workspace.dependencies]
cargo-context-core = { path = "crates/cargo-context-core", version = "0.1.0" }
cargo-context-scrub = { path = "crates/cargo-context-scrub", version = "0.1.0" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
regex = "1"
sha2 = "0.11"
cargo_metadata = "0.18"
syn = { version = "2", features = ["full", "visit-mut", "parsing"] }
quote = "1"
proc-macro2 = "1"
prettyplease = "0.2"
tiktoken-rs = "0.6"
globset = "0.4"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
rmcp = { version = "1.5", default-features = false, features = ["server", "macros", "schemars", "transport-io"] }
schemars = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
